src/objects/Object_Field_Mapping__mdt.object
<CustomObject>
    <fields>
        <fullName>Custom_MetaData_Type__c</fullName>
        <inlineHelpText>The Custom Metadata Type that is used for Field Value Conversion</inlineHelpText>
        <label>Custom MetaData Type</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>External_Object_Type_Field_Name__c</fullName>
        <label>External Object Type Field Name</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>External_Object_Type__c</fullName>
        <inlineHelpText>API Name of the External Object</inlineHelpText>
        <label>External Object Type</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>MetaData_Display_Field__c</fullName>
        <label>MetaData Display Field</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>MetaData_Key_Field__c</fullName>
        <label>MetaData Key Field</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Sort_Order__c</fullName>
        <label>Sort Order</label>
        <precision>18</precision>
        <required>true</required>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>isActive__c</fullName>
        <defaultValue>true</defaultValue>
        <label>isActive</label>
        <type>Checkbox</type>
    </fields>
    <label>Object Field Mapping</label>
    <pluralLabel>Object Field Mappings</pluralLabel>
</CustomObject>